--- a/src/main/ui/src/app/components/introduction/introduction.component.html
+++ b/src/main/ui/src/app/components/introduction/introduction.component.html
@@ -3,6 +3,11 @@
     <h1 class="page-title">Introduction</h1>
   </div>
   <div class="ui-md-12 ui-g-12">
-    <h4>Welcome to the Recipe Registry. This site helps you to manage your recipes.</h4>
+    <p>Welcome to the Recipe Registry. This site helps you to manage your recipes.</p>
+    <p>Here you can:</p>
+    <p>- add, edit or remove recipes</p>
+    <p>- search in recipes (global and local search)</p>
+    <p>- calculate meal servings</p>
+    <p>- download your calculated recipe in PDF</p>
   </div>
 </div>
