--- a/src/main/ui/src/app/components/sidebar/sidebar.component.html
+++ b/src/main/ui/src/app/components/sidebar/sidebar.component.html
@@ -19,6 +19,11 @@
       <div class="ui-md-12 ui-g-12">Serving calculator</div>
     </a>
 
+    <!--Statistics-->
+    <a routerLink="/statistics" routerLinkActive="active" (click)="hideSidebar()">
+      <div class="ui-md-12 ui-g-12">Statistics</div>
+    </a>
+
   </nav>
 </p-sidebar>
 
