Documented the backend code (Javadoc).

--- a/src/main/ui/src/app/components/new-modify-recipe/new-modify-recipe.component.html
+++ b/src/main/ui/src/app/components/new-modify-recipe/new-modify-recipe.component.html
@@ -20,7 +20,7 @@
         <!--Category-->
         <div class="ui-md-3 ui-g-12 responsive-input">
           <span class="ui-float-label">
-            <p-dropdown id="category" name="category" [options]="recipeCategories" [(ngModel)]="displayedRecipe.type"
+            <p-dropdown id="category" name="category" [options]="recipeCategories" [(ngModel)]="displayedRecipe.category"
                         [style]="{'width': '100%'}" [required]="true"></p-dropdown>
             <label>Category<span>*</span></label>
           </span>
