--- a/src/main/ui/src/app/components/recipe-table/recipe-table.component.html
+++ b/src/main/ui/src/app/components/recipe-table/recipe-table.component.html
@@ -20,7 +20,7 @@
     <p-column field="name" header="Name" [filter]="!readOnlyTable" [sortable]="!readOnlyTable"
               filterMatchMode="contains"
               filterPlaceholder="Search by"></p-column>
-    <p-column field="typeName" header="Category" [filter]="!readOnlyTable" [sortable]="!readOnlyTable"
+    <p-column field="categoryName" header="Category" [filter]="!readOnlyTable" [sortable]="!readOnlyTable"
               filterMatchMode="contains"
               filterPlaceholder="Search by"></p-column>
     <p-column field="difficulty" header="Difficulty" [filter]="!readOnlyTable" [sortable]="!readOnlyTable"
