--- a/src/main/ui/src/app/components/recipe-statistics/recipe-statistics.component.html
+++ b/src/main/ui/src/app/components/recipe-statistics/recipe-statistics.component.html
@@ -5,6 +5,11 @@
     <h1 class="page-title">Statistics</h1>
   </div>
 
+  <!--Information-->
+  <div class="ui-md-12 ui-g-12">
+    <p class="main-information">Here you can find the number of recipes grouped by the categories.</p>
+  </div>
+
   <!--Pie chart-->
   <div class="ui-g-12 ui-md-12">
     <p-chart type="pie" [data]="data"></p-chart>
