--- a/src/main/ui/src/app/components/introduction/introduction.component.html
+++ b/src/main/ui/src/app/components/introduction/introduction.component.html
@@ -2,12 +2,13 @@
   <div class="ui-md-12 ui-g-12">
     <h1 class="page-title">Introduction</h1>
   </div>
-  <div class="ui-md-12 ui-g-12">
-    <p>Welcome to the Recipe Registry. This site helps you to manage your recipes.</p>
+  <div id="information-container" class="ui-md-12 ui-g-12">
+    <p class="main-information">Welcome to the Recipe Registry. This site helps you to manage your recipes.</p>
     <p>Here you can:</p>
-    <p>- add, edit or remove recipes</p>
-    <p>- search in recipes (global and local search)</p>
-    <p>- calculate meal servings</p>
-    <p>- download your calculated recipe in PDF</p>
+    <p><span class="glyphicon glyphicon-cog"></span> Add, edit or remove recipes</p>
+    <p><span class="glyphicon glyphicon-search"></span> Search in recipes (global and local search)</p>
+    <p><span class="glyphicon glyphicon-calendar"></span> Calculate meal servings</p>
+    <p><span class="glyphicon glyphicon-save"></span> Download your calculated recipe in PDF</p>
+    <p><span class="glyphicon glyphicon-signal"></span> Check out the recipe statistics</p>
   </div>
 </div>
