Added unit test to the project.

--- a/src/main/ui/src/app/components/introduction/introduction.component.html
+++ b/src/main/ui/src/app/components/introduction/introduction.component.html
@@ -9,6 +9,6 @@
     <p><span class="glyphicon glyphicon-search"></span> Search in recipes (global and local search)</p>
     <p><span class="glyphicon glyphicon-calendar"></span> Calculate meal servings</p>
     <p><span class="glyphicon glyphicon-save"></span> Download your calculated recipe in PDF</p>
-    <p><span class="glyphicon glyphicon-signal"></span> Check out the recipe statistics</p>
+    <p><span class="glyphicon glyphicon-signal"></span> Check the recipe statistics out</p>
   </div>
 </div>
