--- a/src/main/ui/src/app/components/topbar/topbar.component.scss
+++ b/src/main/ui/src/app/components/topbar/topbar.component.scss
@@ -23,7 +23,7 @@
 
 #topbar {
   background: linear-gradient(green, #459e00);
-  box-shadow: 0 8px 6px -6px green;
+  box-shadow: 0 2px 8px 0 green;
   top: 0;
   z-index: 1000;
 }
